--- a/style.css
+++ b/style.css
@@ -79,10 +79,12 @@ body {
 .opis {
     font-family: 'Poppins', sans-serif;
     font-size: 1.2rem;
-    position: fixed;
+    position: absolute;
     color: white;
-    top: 32%;
+    top: 40%;
     left: 22%;
+    transform: translate(-5%, -490%);
+    z-index: 100;
 }
 
 h2 {
@@ -109,10 +111,10 @@ p {
 
 .lewy-dolny {
     position: absolute;  /* lub absolute */
-    bottom: 15%;
-    left: 20%;
-    width: 18vw;
-    height: 24vw;
+    bottom: 5%;
+    left: 15%;
+    width: 23vw;
+    height: 27vw;
     transform: translate(-50%, 50%);
     z-index: 100;  /* na wierzchu innych elementów */
     transition: all 0.3s ease; /* płynna zmiana przy resize */
@@ -121,9 +123,9 @@ p {
 .prawy-dolny {
     position: absolute;  /* lub absolute */
     bottom: 10%;
-    right: 15%;
-    width: 26vw;
-    height: 20vw;
+    right: 5%;
+    width: 34vw;
+    height: 24vw;
     transform: translate(20%, 20%);
     z-index: 100;  /* na wierzchu innych elementów */
     transition: all 0.3s ease; /* płynna zmiana przy resize */
@@ -131,9 +133,9 @@ p {
 
 .nad-przyciskiem {
     position: absolute;  /* lub absolute */
-    top: 16%;
-    right: 50%;
-    width: 35vw;
+    top: 5%;
+    right: 25%;
+    width: 45vw;
     height: 20vw;
     transform: translate(50%, -5%);
     /*object-fit: cover;*/
@@ -174,9 +176,9 @@ p {
 /* DUŻY PRZYCISK */
 .duzy-przycisk {
     /* POWIĘKSZENIE */
-    padding: 35px 100px;
-    font-size: 2.2rem;
-    min-width: 500px;
+    padding: 25px 60px; /* Było: 35px 100px */
+    font-size: 1.8rem; /* Było: 2.2rem */
+    min-width: 400px; /* Było: 500px */
     
     /* NOWA CZCIONKA */
     font-family: 'Montserrat', sans-serif;
@@ -238,7 +240,7 @@ p {
 /* Efekt hover */
 .duzy-przycisk:hover {
     transform: translate(-50%, -50%) scale(1.15) translateY(-10px);
-    padding: 40px 110px;
+    padding: 28px 65px; /* Było: 40px 110px */
     box-shadow: 
         0 30px 70px rgba(255, 126, 95, 0.7),
         inset 0 -8px 0 rgba(0, 0, 0, 0.2),
