--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
     transform: translateY(0) !important; /* zsuwa się w dół do widocznej pozycji */
     opacity: 1 !important;
     overflow-y: scroll !important;
-    pointer-events: auto !important;
+    /*pointer-events: auto !important;*/
     position: fixed;
     top: 0;
     left: 0;
@@ -93,10 +93,12 @@ body {
     font-size: 1.2rem;
     position: absolute;
     color: white;
-    top: 40%;
-    left: 22%;
-    transform: translate(-5%, -490%);
-    z-index: 100;
+    text-align: center;
+    width: 80%;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 50;
 }
 
 h2 {
@@ -123,36 +125,36 @@ p {
 
 .lewy-dolny {
     position: absolute;  /* lub absolute */
-    bottom: 5%;
+    bottom: 22%;
     left: 15%;
-    width: 23vw;
-    height: 27vw;
+    width: 20vw;
+    height: 25vw;
     transform: translate(-50%, 50%);
     z-index: 100;  /* na wierzchu innych elementów */
-    transition: all 0.3s ease; /* płynna zmiana przy resize */
+    /*transition: all 0.3s ease;*/ /* płynna zmiana przy resize */
 }
 
 .prawy-dolny {
     position: absolute;  /* lub absolute */
-    bottom: 10%;
-    right: 5%;
-    width: 34vw;
-    height: 24vw;
-    transform: translate(20%, 20%);
+    bottom: 22%;
+    right: 15%;
+    width: 20vw;
+    height: 25vw;
+    transform: translate(50%, 50%);
     z-index: 100;  /* na wierzchu innych elementów */
-    transition: all 0.3s ease; /* płynna zmiana przy resize */
+    /*transition: all 0.3s ease;*/ /* płynna zmiana przy resize */
 }
 
 .nad-przyciskiem {
     position: absolute;  /* lub absolute */
-    top: 5%;
-    right: 25%;
-    width: 45vw;
-    height: 20vw;
-    transform: translate(50%, -5%);
+    top: 20%;
+    left: 50%;
+    width: 25vw;
+    height: 25vw;
+    transform: translateX(-50%);
     /*object-fit: cover;*/
     z-index: 100;  /* na wierzchu innych elementów */
-    transition: all 0.3s ease; /* płynna zmiana przy resize */
+    /*transition: all 0.3s ease;*/ /* płynna zmiana przy resize */
 }
 
 /* ŚNIEŻKI */
@@ -325,7 +327,7 @@ p {
     transition: all 0.3s;
     backdrop-filter: blur(10px);
     z-index: 1001;
-    pointer-events: auto;
+    /*pointer-events: auto;*/
 }
 
 .maly-przycisk:hover {
@@ -334,7 +336,7 @@ p {
 }
 
 #sekcja-druga.pokazana *:not(.maly-przycisk) {
-    pointer-events: auto !important;
+    /*pointer-events: auto !important;*/
     overflow-y: auto !important;
 }
 
