--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 1.2rem;
     position: absolute;
+    display: flex;
     color: white;
     top: 40%;
     left: 22%;
@@ -144,16 +145,25 @@ p {
 }
 
 .nad-przyciskiem {
-    position: absolute;  /* lub absolute */
+    position: absolute; /* lub absolute */
+    display: flex;
     top: 5%;
     right: 25%;
     width: 45vw;
     height: 20vw;
     transform: translate(50%, -5%);
-    /*object-fit: cover;*/
+    object-fit: cover;
     z-index: 100;  /* na wierzchu innych elementów */
     transition: all 0.3s ease; /* płynna zmiana przy resize */
 }
+
+.zdjecia-dekoracyjne {
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    width: 100% !important;
+    margin: 0 0 30px 0 !important;
+    }
 
 /* ŚNIEŻKI */
         .sniezka {
